add friend crud
