# server/api/handler/friend.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/labstack/echo/v4"
 	"github.com/selcukatav/chat-app/model"
+	"gorm.io/gorm"
 )
 
 // @Summary      Get user's friends
@@ -61,11 +62,14 @@ func (h *Handler) FindFriends(c echo.Context) error {
 // @Failure      400  {object}  map[string]string
 // @Router       /api/friends/{friend_id} [delete]
 func (h *Handler) DeleteFriend(c echo.Context) error {
-	friendID := c.Param("friend_id")
-
+	
 	var friend model.Friend
+	if err := c.Bind(&friend); err != nil {
+		return echo.ErrBadRequest
+	}
 
-	if err := h.DB.First(&friend, friendID).Error; err != nil {
+	user_id, friend_id := friend.UserID, friend.FriendID
+	if err := h.DB.Where("user_id=? and friend_id=?",user_id,friend_id).First(&friend).Error; err != nil {
 		return c.JSON(http.StatusBadRequest, map[string]string{
 			"Message": "Friend not found",
 		})
@@ -79,4 +83,43 @@ func (h *Handler) DeleteFriend(c echo.Context) error {
 	return c.JSON(http.StatusOK, map[string]string{
 		"Message": "Friend deleted successfully!",
 	})
+}
+
+// @Summary      Add a friend
+// @Description  Add friends with each other
+// @Tags         Friends
+// @Accept       json
+// @Produce      json
+// @Param        user_id   path  string  true  "User ID"
+// @Param        friend_id   path  string  true  "Friend ID"
+// @Success      200  {object}  map[string]string
+// @Failure      400  {object}  map[string]string
+// @Router       /api/friends [post]
+func (h *Handler) AddFriend(c echo.Context) error {
+
+	var friend model.Friend
+
+	if err := c.Bind(&friend); err != nil {
+		return echo.ErrBadRequest
+	}
+
+	user_id, friend_id := friend.UserID, friend.FriendID
+	result := h.DB.Where("user_id=? and friend_id=?", user_id, friend_id).First(&friend)
+	if result.RowsAffected > 0 {
+		return c.JSON(http.StatusBadRequest, map[string]string{
+			"Message": "You are already friend with him/her!!",
+		})
+	} else if result.Error != nil && result.Error != gorm.ErrRecordNotFound {
+		return c.JSON(http.StatusInternalServerError, map[string]string{
+			"Message": "Something went wrong",
+		})
+	}
+
+	if err := h.DB.Create(&friend).Error; err != nil {
+		return c.JSON(http.StatusInternalServerError, map[string]string{
+			"Message": "Error occured while adding friend",
+		})
+	}
+
+	return c.JSON(http.StatusOK, friend)
 }
